force-app/main/default/objects/Team_Request__c/Team_Request__c.object-meta.xml
<CustomObject>
    <description>Team availability request for an opportunity not closed won yet. This object allows the Sales Accounts to ask the Team Manager when the right resources would be available o start the project. Based on the Request, the Team Manager will create the Team Weekly Allocation (TWA) with an open status.</description>
    <label>Team Request</label>
    <nameField>
        <displayFormat>TR-{YY}{0}</displayFormat>
        <label>Team Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Team Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>