force-app/main/default/objects/Team_Request__c/fields/Answer_Date__c.field-meta.xml
<CustomField>
    <fullName>Answer_Date__c</fullName>
    <inlineHelpText>When the Team Manager answered to the request.</inlineHelpText>
    <label>Answer Date</label>
    <type>Date</type>
</CustomField>