force-app/main/default/objects/Team_Request__c/fields/Estimated_Days__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Days__c</fullName>
    <inlineHelpText>It can be in range if not clear yet.</inlineHelpText>
    <label>Estimated Days</label>
    <length>50</length>
    <type>Text</type>
</CustomField>