force-app/main/default/objects/Team_Request__c/fields/Estimated_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Start_Date__c</fullName>
    <inlineHelpText>Looking at the current TWAs, if the contract was closed today, we would capacity to start on this date.</inlineHelpText>
    <label>Estimated Start Date</label>
    <type>Date</type>
</CustomField>