force-app/main/default/objects/Team_Request__c/fields/Request_Stage__c.field-meta.xml
<CustomField>
    <fullName>Request_Stage__c</fullName>
    <label>Request Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Requested</fullName>
            </value>
            <value>
                <fullName>Created as Draft</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>