force-app/main/default/objects/Team_Request__c/fields/Resources_Needs__c.field-meta.xml
<CustomField>
    <fullName>Resources_Needs__c</fullName>
    <inlineHelpText>How many resources and profiles are estimated as needed.</inlineHelpText>
    <label>Resources Needs</label>
    <type>TextArea</type>
</CustomField>