force-app/main/default/objects/Team_Request__c/fields/Resources_Recommended__c.field-meta.xml
<CustomField>
    <fullName>Resources_Recommended__c</fullName>
    <inlineHelpText>The team resources recommended by the Team Manager</inlineHelpText>
    <label>Resources Recommended</label>
    <type>TextArea</type>
</CustomField>