force-app/main/default/objects/Team_Request__c/fields/Scope_Main_Deliverables__c.field-meta.xml
<CustomField>
    <fullName>Scope_Main_Deliverables__c</fullName>
    <inlineHelpText>Specially the main tools.</inlineHelpText>
    <label>Scope Main Deliverables</label>
    <type>TextArea</type>
</CustomField>