force-app/main/default/objects/Team_Request__c/fields/WBS_and_Estimatives__c.field-meta.xml
<CustomField>
    <fullName>WBS_and_Estimatives__c</fullName>
    <inlineHelpText>Spreadsheet prepared by the Proposal Delivery Manager.</inlineHelpText>
    <label>WBS and Estimatives</label>
    <type>Url</type>
</CustomField>